--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
             <button class="navigation" data-modal-target="#modal" >New Entry</a>
         </div>
 
+        <div id="journal-entry-area">
+            
+        </div>
+
 
 
 
@@ -46,17 +50,27 @@
                 quis perferendis, asperiores sint dolores laboriosam!
             </div>
         </div>
-        <div id="overlay"></div>
-<!--
-        <div class="journal-ent" id="journal-ent-1">
-            <div class="overlay"></div>
-            <div class="journal-ent-content">
-                <div class="close-button" onclick="toggleJournalEntry()">&times;</div>
-                <h1 class="journal-ent-title">Journal Entry Title</h1>
-                <div>This will be the text area of the popup window.</div>
+
+
+
+
+
+        <div class="modal-viewer" id="modalviewer">
+            <div class="modal-viewer-header">
+                <div class="title">New Journal Entry</div>
+                <button data-close-button class="close-button-viewer">&times;</button>
+            </div>
+            <div class="modal-viewer-body">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                Expedita repellat odit libero modi et dignissimos dolorum 
+                nihil est sit explicabo nisi blanditiis voluptatibus facilis 
+                quis perferendis, asperiores sint dolores laboriosam!
             </div>
         </div>
-    -->        
+
+
+        <div id="overlay"></div>
+      
 
     </body>
 
