--- a/public/index.html
+++ b/public/index.html
@@ -21,14 +21,14 @@
             <button class="navigation" data-modal-target="#modal" >New Entry</a>
         </div>
 
-        <div id="journal-entry-area">
-            
-        </div>
+        <div id="journal-entry-area"></div>
 
 
 
 
         
+<!--Modal used to create a new journal entry-->
+
         <div class="modal" id="modal">
             <div class="modal-header">
                 <div class="title">New Journal Entry</div>
@@ -43,29 +43,21 @@
                 <input type="text" id="journal-notes"><br>
                 <button submit-entry>Submit</button>
             </form>
-            <div class="modal-body">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                Expedita repellat odit libero modi et dignissimos dolorum 
-                nihil est sit explicabo nisi blanditiis voluptatibus facilis 
-                quis perferendis, asperiores sint dolores laboriosam!
-            </div>
         </div>
 
 
 
 
+<!--Modal used to view a journal entry-->
 
-        <div class="modal-viewer" id="modalviewer">
+        <div class="modal-viewer" id="modal-viewer">
             <div class="modal-viewer-header">
-                <div class="title">New Journal Entry</div>
-                <button data-close-button class="close-button-viewer">&times;</button>
+                <div class="title">Journal Entry Title:<span id="modal-viewer-title"></span></div>
+                <button data-close-button class="close-button">&times;</button>
             </div>
-            <div class="modal-viewer-body">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                Expedita repellat odit libero modi et dignissimos dolorum 
-                nihil est sit explicabo nisi blanditiis voluptatibus facilis 
-                quis perferendis, asperiores sint dolores laboriosam!
-            </div>
+            <div>Date Entered:<span id="modal-viewer-date"></span></div>
+            <div>Methods Learned:<span id="modal-viewer-methods"></span></div>
+            <div>Journal Entry Notes:<span id="modal-viewer-body"></span></div>
         </div>
 
 
