Journal entries now viewable in modal

--- a/public/index.html
+++ b/public/index.html
@@ -57,7 +57,7 @@
             </div>
             <div>Date Entered:<span id="modal-viewer-date"></span></div>
             <div>Methods Learned:<span id="modal-viewer-methods"></span></div>
-            <div>Journal Entry Notes:<span id="modal-viewer-body"></span></div>
+            <div>Journal Entry Notes:<span id="modal-viewer-notes"></span></div>
         </div>
 
 
