--- a/public/index.html
+++ b/public/index.html
@@ -58,10 +58,12 @@
                 <div class="title">Journal Entry: <span id="modal-viewer-title"></span></div>
                 <button data-close-button class="close-button">&times;</button>
             </div>
-            <div>Date Entered: <span id="modal-viewer-date"></span></div>
-            <div>Methods Learned: <span id="modal-viewer-methods"></span></div>
-            <div>Journal Entry Notes: <span id="modal-viewer-notes"></span></div>
-            <button delete-entry>Delete Entry</button>
+            <div class="modal-viewer-body">
+                <div>Date Entered: <span id="modal-viewer-date"></span></div>
+                <div>Methods Learned: <span id="modal-viewer-methods"></span></div>
+                <div>Journal Entry Notes: <span id="modal-viewer-notes"></span></div>
+                <button id="delete-entry" delete-entry>Delete Entry</button>
+            </div>
         </div>
 
 
