Readme addition, and enable line carriage returns

--- a/public/index.html
+++ b/public/index.html
@@ -65,9 +65,11 @@
                 <button data-close-button class="close-button">&times;</button>
             </div>
             <div class="modal-viewer-body">
-                <div>Date Entered: <span id="modal-viewer-date"></span></div>
-                <div>Methods Learned: <span id="modal-viewer-methods"></span></div>
-                <div id="modal-viewer-text">Journal Entry Notes: <span id="modal-viewer-notes"></span></div>
+                <div class="attr-name">Date Entered: <span class="attr-text" id="modal-viewer-date"></span></div>
+                <div class="attr-name">Methods Learned: <span class="attr-text" id="modal-viewer-methods"></span></div>
+                <div class="attr-name" id="modal-viewer-text">Journal Entry Notes: 
+                    <span class="attr-text" id="modal-viewer-notes"></span>
+                </div>
                 <button id="delete-entry" delete-entry>Delete Entry</button>
             </div>
         </div>
