touch up formatting

--- a/public/index.html
+++ b/public/index.html
@@ -67,9 +67,8 @@
             <div class="modal-viewer-body">
                 <div class="attr-name">Date Entered: <span class="attr-text" id="modal-viewer-date"></span></div>
                 <div class="attr-name">Methods Learned: <span class="attr-text" id="modal-viewer-methods"></span></div>
-                <div class="attr-name" id="modal-viewer-text">Journal Entry Notes: 
-                    <span class="attr-text" id="modal-viewer-notes"></span>
-                </div>
+                <div class="attr-name" >Journal Entry Notes: </div>
+                    <div id="modal-viewer-text"><span class="attr-text" id="modal-viewer-notes"></span></div>
                 <button id="delete-entry" delete-entry>Delete Entry</button>
             </div>
         </div>
