camera input addition

--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,10 @@
         </div>
     </header>
 
+    <div>
+        <input type="file" accept="image/*" capture="environment">
+    </div>
+
     <body onload="getEntries()">
         <div id="journal-entry-area"></div>
         <img href="tiger.jpg" class="background-img"/>
